Init travis & jacoco2

--- a/travis.yml
+++ b/travis.yml
@@ -5,6 +5,10 @@ jdk:
 
 sudo: false
 
+env:
+  global:
+    - CODECOV_TOKEN="cbc1f603-5bd7-4187-ab8b-4c616f4e14c1"
+
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонний сервис https://codecov.io/
 after_success:
@@ -17,7 +21,3 @@ notifications:
     on_success: never # default: change
     on_failure: always # default: always
 
-
-  env:
-    global:
-      CODECOV_TOKEN='641d9cd5-c2a8-4af6-82cd-973b9b0cd27b'
